# structscope

./: .gitignore  CHANGELOG.md  CITATION.bib  Cargo.toml  LICENSE  README.md  book.toml
.github/scripts/: publish-crates.sh
.github/workflows/: ci.yml  docs.yml  publish-crates.yml  release.yml
assets/: README.md
crates/structscope-agent/: Cargo.toml
crates/structscope-agent/src/: lib.rs
crates/structscope-cli/: Cargo.toml
crates/structscope-cli/src/: main.rs
crates/structscope-core/: Cargo.toml
crates/structscope-core/src/: align.rs  bcif.rs  lib.rs  ligand_filter.rs  model.rs  parser.rs  rmsd.rs  seqalign.rs
crates/structscope-core/tests/: rcsb_corpus.rs
crates/structscope-events/: Cargo.toml
crates/structscope-events/src/: lib.rs
crates/structscope-features/: Cargo.toml
crates/structscope-features/src/: compare.rs  dihedral.rs  interactions.rs  interface.rs  lc89.rs  lib.rs  ligand.rs  per_residue.rs  quality.rs  ramachandran.rs  sasa.rs  ss.rs
crates/structscope-features/tests/: compare_golden.rs  dihedral.rs  interactions.rs  interface_golden.rs  quality_golden.rs  secondary_structure.rs
crates/structscope-graphs/: Cargo.toml
crates/structscope-graphs/src/: lib.rs  visualizer_template.html
crates/structscope-provenance/: Cargo.toml
crates/structscope-provenance/src/: lib.rs
crates/structscope-store/: Cargo.toml
crates/structscope-store/src/: lib.rs  parquet_out.rs
docs/: SUMMARY.md  architecture.md  citation.md  cli.md  interactions_and_graphs.md  intro.md
schemas/: events.schema.json  features.schema.json
tests/: smoke.md
tests/corpus/rcsb/: ids.txt
tests/corpus/rcsb/bcif/: 100d.bcif  1nkd.bcif
tests/fixtures/compare/: README.md  synthetic_triplet.json
tests/fixtures/interface/: README.md  synthetic_dimer.json
tests/fixtures/quality/: README.md  synthetic_dipeptide.json  synthetic_panel.json
