[workspace]
members = [
    "crates/structscope-cli",
    "crates/structscope-core",
    "crates/structscope-graphs",
    "crates/structscope-features",
    "crates/structscope-store",
    "crates/structscope-events",
    "crates/structscope-agent",
    "crates/structscope-provenance",
]
resolver = "2"

[workspace.package]
version = "0.4.0"
edition = "2021"
license = "MIT"
authors = ["Danial Gharaie Amirabadi"]
repository = "https://github.com/Danialgharaie/structscope"

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
flate2 = "1"
petgraph = "0.6"
pdbrust = { version = "0.7", features = ["gzip"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["serde", "v4"] }
walkdir = "2"
rayon = "1.10"

[workspace.lints.rust]
unsafe_code = "forbid"
