[workspace]
members = [
    "crates/structscope-cli",
    "crates/structscope-core",
    "crates/structscope-graphs",
    "crates/structscope-features",
    "crates/structscope-store",
    "crates/structscope-events",
    "crates/structscope-agent",
    "crates/structscope-provenance",
]
resolver = "2"

[workspace.package]
version = "0.4.1"
edition = "2021"
license = "MIT"
authors = ["Danial Gharaie Amirabadi"]
description = "Rust-native structural bioinformatics toolkit"
readme = "README.md"
repository = "https://github.com/Danialgharaie/structscope"
homepage = "https://github.com/Danialgharaie/structscope"
documentation = "https://danialgharaie.github.io/structscope/"
keywords = ["bioinformatics", "structural-biology", "pdb", "mmcif"]
categories = ["science"]

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
flate2 = "1"
petgraph = "0.6"
pdbrust = { version = "0.7", features = ["gzip"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["serde", "v4"] }
walkdir = "2"
rayon = "1.10"
structscope-core = { path = "crates/structscope-core", version = "0.4.1" }
structscope-events = { path = "crates/structscope-events", version = "0.4.1" }
structscope-agent = { path = "crates/structscope-agent", version = "0.4.1" }
structscope-graphs = { path = "crates/structscope-graphs", version = "0.4.1" }
structscope-features = { path = "crates/structscope-features", version = "0.4.1" }
structscope-store = { path = "crates/structscope-store", version = "0.4.1" }
structscope-provenance = { path = "crates/structscope-provenance", version = "0.4.1" }

[workspace.lints.rust]
unsafe_code = "forbid"
