[package]
name = "structscope-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
guard-ebpf = []

[dependencies]
serde.workspace = true
