[package]
name = "structscope-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "structscope"
path = "src/main.rs"

[features]
default = []
duckdb = ["structscope-store/duckdb"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
walkdir.workspace = true
rayon.workspace = true
structscope-agent = { path = "../structscope-agent" }
structscope-core = { path = "../structscope-core" }
structscope-events = { path = "../structscope-events" }
structscope-features = { path = "../structscope-features" }
structscope-graphs = { path = "../structscope-graphs" }
structscope-provenance = { path = "../structscope-provenance" }
structscope-store = { path = "../structscope-store" }
