[package]
name = "structscope-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for the structscope structural bioinformatics toolkit"
readme.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
keywords.workspace = true
categories = ["command-line-utilities", "science"]

[[bin]]
name = "structscope"
path = "src/main.rs"

[features]
default = []
duckdb = ["structscope-store/duckdb"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
walkdir.workspace = true
rayon.workspace = true
structscope-agent.workspace = true
structscope-core.workspace = true
structscope-events.workspace = true
structscope-features.workspace = true
structscope-graphs.workspace = true
structscope-provenance.workspace = true
structscope-store.workspace = true
