[package]
name = "structscope-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
flate2.workspace = true
pdbrust.workspace = true
rmpv = "1.3"
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
flate2.workspace = true
