[package]
name = "structscope-features"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
petgraph.workspace = true
serde.workspace = true
serde_json.workspace = true
structscope-core = { path = "../structscope-core" }
structscope-graphs = { path = "../structscope-graphs" }
