[package]
name = "structscope-provenance"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
structscope-events = { path = "../structscope-events" }
uuid.workspace = true
