[package]
name = "structscope-store"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
duckdb = ["dep:duckdb"]

[dependencies]
anyhow.workspace = true
arrow = "58"
parquet = { version = "58", features = ["arrow"] }
serde.workspace = true
serde_json.workspace = true
structscope-features.workspace = true
duckdb = { version = "1.10503", features = ["bundled"], optional = true }

[dev-dependencies]
tempfile = "3"
